src/test/deca/context/valid/add-float-int.deca
// Description:
//    Tests de L'opération d'addition d'un flottant et un entier
//
// Resultats:
//   
//
// Historique:
//    cree le 08/01/2022
{
    float f = 1.5;
    int i = 1;
    f = f + i;
}